Fix mobile nav poistion Align submit button text

--- a/styles/style.css
+++ b/styles/style.css
@@ -746,6 +746,13 @@ Additional Styles
 		box-shadow: 0 10px 27px rgba(0, 0, 0, .75);
 	}
 
+	header #nav-bar {
+		position: fixed;
+		top: 0;
+		width: 100;
+		padding-bottom: 20px;
+	}
+
 	.title p {
 		font-size: 1.5rem;
 		margin-bottom: .5rem;
@@ -799,7 +806,7 @@ Additional Styles
 }
 
 .submitBtn {
-	padding-left: 1rem;
+	padding-left: 1.25rem;
 	padding-right: 1rem;
 	padding-top: .75rem;
 	padding-bottom: .75rem;
